Aligned the index.html divs by using only the margin:vw,vh options in css but still have to fix the nav bar because i don't like the appearence of it made by the standard bootstrap, also gonna work on the lasagna and tortilla pizza page next

--- a/odin-recipes/styles.css
+++ b/odin-recipes/styles.css
@@ -1,6 +1,9 @@
-html{}
+
 body{
     background: linear-gradient(180deg, #F9E9D4 20.78%, #B7B0AC 100%);
+    height:100vh;
+    width:100vw;
+    
     
 }
 #title{
@@ -19,5 +22,43 @@ body{
 .navbar{
 
 }
+nav{
+    margin-left:60vw;
+    
+}
+#subtitle{
+    margin-left:19.5vw;
+}
+p{
+    font-family:Poly;
+    text-shadow:none;
+}
+#subtitle2{
+    margin-left:55vw;
+    margin-top:5vh;
+}
+.chef{
+position: absolute;
+width: 30vw;
+height: 50vh;
 
+border-radius: 10px;
 
+}
+#image{
+    margin-left:19.5vw;
+    margin-top:-14vh;
+}
+#half{
+    display:grid;
+    grid-template-columns: 50vw 50vw;
+}
+h2, ul{
+    font-family:Poly;
+    
+}
+.btn-outline-success:hover {
+    color: red;
+    background-color: red;
+    border-color: #28a745;
+}
